--- a/README
+++ b/README
@@ -2,11 +2,11 @@
 
 	This repository is for MIUI CM9 on Sony Xperia Go.
 	It is still a work in progress.
-	Curently suported device is Sony Xperia Go.
-	Support for Sony Xperia Sola soon!
+	Curently suported device is Sony Xperia Go and Sony Xperia Sola
 
 
-* How To Build MIUI CM9 for Sony Xperia GO
+
+* How To Build MIUI CM9 for Sony Xperia GO or Sony Xperia Sola
 
 	Make a workspace
 
@@ -14,12 +14,20 @@
 	$ git clone git@github.com/munjeni/miui_sony_xperia.git miui_xperia
 
 
+
 * Build MIUI CM9
 
 	Copy CM9 rom to the /root/miui_xperia/**DEVICE** and rename zip archive to stockrom.zip 
 
-	$ cd ~/miui_xperia 
-	$ ./makemiui.sh lotus 
+	$ cd ~/miui_xperia
+
+	To build MIUI for Sony Xperia Go
+
+	$ ./makemiui.sh lotus
+
+	To build MIUI for Sony Xperia Sola
+ 
+	$ ./makemiui.sh pepper 
 
 
 
