--- a/pepper/overlay/framework-miui-res/res/values-sr/strings.xml
+++ b/pepper/overlay/framework-miui-res/res/values-sr/strings.xml
@@ -52,10 +52,10 @@
     <string name="miui_copyright_title">Copyright</string>
     <string name="miui_user_agreement_title">Мораш се сложити</string>
     <string name="miui_privacy_policy_title">Приватност</string>
-    <string name="user_agreement1">Узимаћеш системске и онлајн сервисе од Xiaomi, молим те прочитај следеће</string>
+    <string name="user_agreement1">Користићете системске и онлајн сервисе од Xiaomi, молимо вас прочитај следеће</string>
     <string name="user_agreement2">" Дали се слажеш"</string>
     <string name="user_agreement3">" и "</string>
-    <string name="user_agreement4">Приватност</string>
+    <string name="user_agreement4">у вези приватности. </string>
     <string name="user_agreement5">Притисни OK ако сте сагласни и у складу са горњим садржајем, кликни Одустани да изађеш.</string>
     <string name="sd_not_available">SD картица унмонтована или недоступна</string>
     <string name="sd_not_available_use_internal_storage">SD картица недоступна, снимам на унутраснји простор</string>
