updated deutch translation

--- a/lotus/overlay/framework-miui-res/res/values-de/strings.xml
+++ b/lotus/overlay/framework-miui-res/res/values-de/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="reboot_confirm">Telefon wird neu gestartet</string>
+    <string name="reboot_confirm">Das Telefon wird neu gestartet.</string>
     <string name="reboot_progress">Neustart...</string>
     <string name="resourcebrowser_lable">Ressourcen</string>
     <string name="sdcard_status_changed_dialog_title">SD Karten Status geändert</string>
@@ -29,9 +29,9 @@ Bitte laden Sie diese App neu.</string>
     <string name="resource_apply">Anwenden</string>
     <string name="resource_update">Update</string>
     <string name="resource_select">Auswählen</string>
-    <string name="online_hottest">Hottest</string>
+    <string name="online_hottest">Beliebt</string>
     <string name="online_latest">Neueste</string>
-    <string name="online_hottest_short">Hottest</string>
+    <string name="online_hottest_short">Beliebt</string>
     <string name="online_latest_short">Neueste</string>
     <string name="online_no_network">Kann nicht mit dem Netzwerk verbinden</string>
     <string name="online_search_hint">Suche nach Online Verbindungen</string>
@@ -46,21 +46,21 @@ Bitte laden Sie diese App neu.</string>
     <string name="lockscreen_time_bottom_hint">Zum Entsperren nach unten ziehen</string>
     <string name="lockscreen_call_bottom_hint">Zum Telefonieren nach unten ziehen</string>
     <string name="lockscreen_sms_bottom_hint">Zum SMS lesen nach unten ziehen</string>
-    <string name="lock_screen_date">EEEE, MMMM d</string>
+    <string name="lock_screen_date">EEEE, d MMMM</string>
     <string name="lockscreen_unlock_sim_via_puk">Benutze PUK zum Entsperren der SIM-Karte</string>
     <string name="safetylegal_activity_unreachable">Ihr Telefon ist mit keinem Datendienst verbunden. Um diese Informationen jetzt anzuzeigen, rufen Sie %s von einem beliebigen, mit dem Internet verbundenen Computer auf.</string>
-    <string name="miui_copyright_title">Copyright</string>
-    <string name="miui_user_agreement_title">User agreement</string>
+    <string name="miui_copyright_title">Urheberrecht</string>
+    <string name="miui_user_agreement_title">Nutzungsvereinbarung</string>
     <string name="miui_privacy_policy_title">Zusätzliche Datenschutzbestimmungen</string>
     <string name="user_agreement1">Wenn Sie den Onlineservice von Xiaomi nutzen möchten, lesen Sie bitte</string>
-    <string name="user_agreement2"> Einverständniserklärung</string>
-    <string name="user_agreement3"> und </string>
-    <string name="user_agreement4">Zusätzliche Datenschutzbestimmungen</string>
-    <string name="user_agreement5">Klicken Sie auf OK, wenn Sie mit dem o.g. Inhalt einverstanden sind, klicken Sie auf ABBRECHEN, um zu beenden.</string>
-    <string name="sd_not_available">SD Karte unmounted oder nicht verfügbar</string>
-    <string name="sd_not_available_use_internal_storage">SD Karte nicht verfügbar, benutze internen Speicher</string>
-    <string name="sd_not_available_low_internal_storage">SD Karte unmounted oder nicht verfügber, interner Speicher hat zu wenig Platz</string>
-    <string name="sd_not_available_saved_to_internal_storage">benutze internen Speicher</string>
+    <string name="user_agreement2"> die Einverständniserklärung</string>
+    <string name="user_agreement3"> und die </string>
+    <string name="user_agreement4">Zusätzlichen Datenschutzbestimmungen.</string>
+    <string name="user_agreement5">Klicken Sie auf OK, wenn Sie mit dem Inhalt einverstanden sind, klicken Sie auf ABBRECHEN, um zu beenden.</string>
+    <string name="sd_not_available">Die SD-Karte ist nicht eingebunden oder nicht verfügbar</string>
+    <string name="sd_not_available_use_internal_storage">Die SD Karte ist nicht verfügbar, benutze internen Speicher</string>
+    <string name="sd_not_available_low_internal_storage">Die SD Karte ist nicht eingebunden oder nicht verfügbar - interner Speicher hat zu wenig Platz</string>
+    <string name="sd_not_available_saved_to_internal_storage">Benutze internen Speicher</string>
     <string name="unknown">Unbekannt</string>
     <string name="private_num">Private Nummer</string>
     <string name="payphone">Münztelefon</string>
@@ -76,8 +76,8 @@ Aktivieren über Einstellungen / Alle Einstellungen / Tasteneinstellungen</strin
     <string name="force_exit_message">Erfolgreich beendet %1$s</string>
     <string name="global_action_toggle_privacy_mode">Gast</string>
     <string name="global_action_privacy_mode_on_status">Gastmodus ist aktiviert</string>
-    <string name="global_action_privacy_mode_on_toast">Gastmodus ist aktiviert. Daten Anrufe und Kurzmitteilungen werden ausgeblendet, und der Launcher kann nicht in den Editier Modus.</string>
-    <string name="global_action_privacy_mode_dialog_message">Im Gastmodus werden Daten Anrufe und Kurzmitteilungen ausgeblendet und der Launcher kann nicht in den Editier Modus. Sie können ein Password einrichten, um den Gastmodus zu schützen</string>
+    <string name="global_action_privacy_mode_on_toast">Gastmodus ist aktiviert. Daten Anrufe und Kurzmitteilungen werden ausgeblendet und der Launcher kann nicht in den Editier-Modus.</string>
+    <string name="global_action_privacy_mode_dialog_message">Im Gastmodus werden Daten Anrufe und Kurzmitteilungen ausgeblendet und der Launcher kann nicht in den Editier Modus. Sie können ein Password einrichten, um den Gastmodus zu schützen.</string>
     <string name="global_action_privacy_mode_off_status">Gastmodus ist deaktiviert</string>
     <string name="delete">Löschen</string>
     <string name="select_all">Alles auswählen</string>
@@ -94,7 +94,7 @@ Aktivieren über Einstellungen / Alle Einstellungen / Tasteneinstellungen</strin
     <string name="resource_can_not_selected">%1$s können nicht ausgewählt werden!</string>
     <string name="resource_system_title">System Ressourcen</string>
     <string name="resource_downloaded_title">Heruntergeladene Elemente</string>
-    <string name="xiaomi_account_type">xiaomi.com</string>
+    <string name="xiaomi_account_type">com.xiaomi</string>
     <string name="resource_see_more">Mehr anzeigen</string>
     <string name="month_of_january">Jan</string>
     <string name="month_of_february">Feb</string>
@@ -108,24 +108,24 @@ Aktivieren über Einstellungen / Alle Einstellungen / Tasteneinstellungen</strin
     <string name="month_of_october">Okt</string>
     <string name="month_of_november">Nov</string>
     <string name="month_of_december">Dez</string>
-    <string name="day_of_month"> %d</string>
+    <string name="day_of_month">%d </string>
     <string name="group_name_contacts">Kontakte</string>
     <string name="group_name_friends">Freunde</string>
     <string name="group_name_family">Familie</string>
     <string name="group_name_coworkers">Kollegen</string>
     <string name="perm_activate_lab">Xiaomi Aktivierungsdienst</string>
-    <string name="perm_activate_dspt">Senden Sie eine SMS, um den Xiaomi Dienst zu aktivieren</string>
-    <string name="perm_get_user_info_lab">Sie erhalten die Xiaomi Zugangsinformationen</string>
-    <string name="perm_get_user_info_dspt">Sie erhalten die detailierten Daten vom Xiaomi Zugang</string>
-    <string name="android_lockscreen_glogin_instructions">Um die Sperre aufzuheben, melden Sie sich mit Ihren Zugangsdaten an</string>
-    <string name="sync_one_time_sync">Zum sofortigen Synchronisieren berühren %1$s </string>
+    <string name="perm_activate_dspt">Senden Sie eine SMS, um den Xiaomi Dienst zu aktivieren.</string>
+    <string name="perm_get_user_info_lab">Sie erhalten die Xiaomi Zugangsinformationen.</string>
+    <string name="perm_get_user_info_dspt">Sie erhalten die detailierten Daten vom Xiaomi Zugang.</string>
+    <string name="android_lockscreen_glogin_instructions">Um die Sperre aufzuheben, melden Sie sich mit Ihren Zugangsdaten an.</string>
+    <string name="sync_one_time_sync">Zum sofortigen Synchronisieren für %1$s berühren</string>
     <string name="no_sim">Keine SIM, Dienst nicht verfügbar</string>
     <string name="activating">Aktivierung...</string>
     <string name="perm_tigger_toggle_lab">Aktion von der Statusleiste geändert</string>
-    <string name="perm_tigger_toggle_dspt">Erlaube den Anwendungen Änderungen vorzunehmen, welche von der Statusleiste verwaltet werden</string>
+    <string name="perm_tigger_toggle_dspt">Erlaube den Anwendungen Änderungen vorzunehmen, welche von der Statusleiste verwaltet werden.</string>
     <string name="perm_use_find_device">Gerät finden</string>
-    <string name="find_device_sim_change_instructions">Ihr Gerät wurde gesperrt
-Bitte setzen Sie eine SIM-Karte oder geben Sie Ihr Xiaomi Zugangspasswort ein</string>
+    <string name="find_device_sim_change_instructions">Ihr Gerät wurde gesperrt. 
+Bitte setzen Sie eine SIM-Karte oder geben Sie Ihr Xiaomi Zugangspasswort ein.</string>
     <string name="check_phone_error_title">Synchronisation Service fehlgeschlagen</string>
     <string name="check_phone_io_error">Netzwerkfehler</string>
     <string name="send_sms_for_sync_title">Synchronisation Service nicht aktiviert</string>
@@ -133,22 +133,22 @@ Bitte setzen Sie eine SIM-Karte oder geben Sie Ihr Xiaomi Zugangspasswort ein</s
     <string name="activate">Aktivierung</string>
     <string name="perm_auto_backup">Automatisches Backup</string>
     <string name="activate_fail_notification_title">Reaktivieren des Xiaomi Synchronisations-Service</string>
-    <string name="sim_changed_reactivate_notice">Aktuelle SIM ist nicht aktiviert. Eine normale SMS wird benötigt, um den Service zu aktivieren. Jetzt akticvieren?</string>
+    <string name="sim_changed_reactivate_notice">Aktuelle SIM ist nicht aktiviert. Eine normale SMS wird benötigt, um den Service zu aktivieren. Jetzt aktivieren?</string>
     <string name="error_title">Synchronisationsfehler von %s</string>
     <string name="error_unauthorized">Zu viele Fehler der Authentifizierung. Synchronisation gestoppt.</string>
     <string name="error_forbidden">Ihr Zugang machte Probleme. Synchronisation abgebrochen.</string>
     <string name="error_not_acceptable">Server Fehlfunktion. Synchronisation abgebrochen.</string>
-    <string name="screen_on_proximity_sensor_hint">Abbrechen erzwingen: Drücke "Zurück" + "Lautstärke hoch" Tasten"</string>
+    <string name="screen_on_proximity_sensor_hint">Abbrechen erzwingen: Drücke "Zurück" und "Lautstärke +" Tasten"</string>
     <string name="screen_on_proximity_sensor_summary">Nicht den oberen Bildschirmrand bedecken</string>
     <string name="screen_on_proximity_sensor_title">Fehlbedienung vehindert Modus</string>
-    <string name="wake_alarm_message">Shutdown alarm still rings at %s</string>
+    <string name="wake_alarm_message">Weckton ausschalten. Wiederholung in %s</string>
     <string name="alarm_message_12_hour_formate">h:mm aa</string>
     <string name="format_time_in_12_hours">%1$s %2$s</string>
     <string name="description_downloadtime">Download:</string>
     <string name="permlab_accessNote">Zugriff auf Ihre Notizen</string>
-    <string name="permdesc_accessNote">Dies erlaubt der App ihre Notizen zu lesen und zu verändern, welche in Ihrem Telefon gespeichert sind. Bösartige Programme können dies nutzen, um Ihre Notizen an andere Personen zu schicken oder sie zu löschen.</string>
-    <string name="memory_clear_result">Erfolgreich %1$s Speicher frei gemacht,
-Aktuell verfügbarer Speicher %2$s</string>
+    <string name="permdesc_accessNote">Dies erlaubt der Anwendung ihre Notizen zu lesen und zu verändern, welche in Ihrem Telefon gespeichert sind. Bösartige Programme können dies nutzen, um Ihre Notizen an andere Personen zu schicken oder sie zu löschen.</string>
+    <string name="memory_clear_result">Erfolgreich %1$s Speicher frei gemacht. 
+Aktuell verfügbarer Speicher %2$s.</string>
     <string name="memory_clear_nothing_result">Aktuell kein belegter Speicher</string>
     <string name="perm_send_push_lab">Sende Push Nachricht</string>
     <string name="perm_send_push_dspt">Erlaube es eine Xiaomi Push Nachricht zu senden</string>
@@ -174,16 +174,16 @@ Aktuell verfügbarer Speicher %2$s</string>
     <string name="status_bar_toggle_vibrate">Vibration</string>
     <string name="status_bar_toggle_wifi">WLan</string>
     <string name="screen_rotation_freeze_message">Verhindert Bildschirmrotation zum Querformat</string>
-    <string name="screen_button_disabled_message">Untere Bildschirmtasten sind gesperrt. Zum Aktiveren HOME + POWER Taste drücken</string>
+    <string name="screen_button_disabled_message">Untere Bildschirmtasten sind gesperrt. Zum Aktiveren "HOME" und "POWER" Tasten drücken.</string>
     <string name="screen_button_enabled_message">Untere Bildschirmtasten sind aktiviert</string>
-    <string name="no_vibrate_hint">Entsprechend Ihrer Einstellungen, werden ankomende Gespräche und SMS nicht vibrieren, auch nicht bei Aktivierung der Vibrationsfunktion</string>
+    <string name="no_vibrate_hint">Entsprechend Ihrer Einstellungen, werden ankommende Gespräche und SMS nicht vibrieren. Auch nicht bei Aktivierung der Vibrationsfunktion.</string>
     <string name="to_vibrate_settings">Vibration Einstellung</string>
     <string name="incoming_call_vibrate_hint">Eingehender Anruf</string>
     <string name="notification_vibrate_hint">Benachrichtigung</string>
     <string name="mms_vibrate_hint">Nachricht</string>
-    <string name="not_all_vibrate_hint">Entsprechend ihrer Einstellung, %1$s vibriert, %2$s vibriert nicht. Dies kann  unter Einstelungen / Töne / Vibration geändert werden</string>
+    <string name="not_all_vibrate_hint">Entsprechend ihrer Einstellung, %1$s vibriert, %2$s vibriert nicht. Dies kann  unter Einstellungen / Töne / Vibration geändert werden</string>
     <string name="screen_button_notification_title">Bildschirmtasten sind gesperrt</string>
-    <string name="screen_button_notification_text">Drücke HOME + POWER zum Aktivieren</string>
+    <string name="screen_button_notification_text">Drücke "HOME" und "POWER" Tasten zum Aktivieren</string>
     <string name="perm_payment_lab">Xiaomi Bezahldienst</string>
     <string name="perm_payment_dspt">Erlaube der Anwendung mit Xiaomi Bezahldienst zu bezahlen</string>
     <string name="resource_buy">Kaufen</string>
@@ -193,10 +193,10 @@ Aktuell verfügbarer Speicher %2$s</string>
     <string name="resource_get_auth">Sie haben keinen Zugriff auf diese Ressource.</string>
     <string name="resource_get_auth_checking">Prüfe Genehmigung...</string>
     <string name="resource_get_auth_retrieving">Abrufen der Genehmigung...</string>
-    <string name="resource_server_out_of_service">Dienst nicht erreichbar, bitte versuchen Sie es später noch einmal.</string>
+    <string name="resource_server_out_of_service">Dienst nicht erreichbar. Bitte versuchen Sie es später noch einmal.</string>
     <string name="description_summary">Zusammenfassung:</string>
     <string name="theme_update_request_title">Thema erneuern</string>
-    <string name="theme_update_request_content">Ein neues Themenpaket wird benötigt, das Erneuern kann eine längere Zeit in Anspruch nehmen. Klicken Sie auf OK, um jetzt zu Aktualisieren.</string>
+    <string name="theme_update_request_content">Ein neues Themenpaket wird benötigt. Das Erneuern kann eine längere Zeit in Anspruch nehmen. Klicken Sie auf OK, um jetzt zu Aktualisieren.</string>
     <string name="theme_update_request_continue_content">Die letzte Aktualisierung des Themas war nicht komplett, trotzdem weiter?</string>
     <string name="theme_updating_title">Erneuere Thema</string>
     <string name="theme_updating_precontent">In Vorbereitung, bitte warten...</string>
@@ -212,13 +212,13 @@ Aktuell verfügbarer Speicher %2$s</string>
     <string name="status_bar_toggle_ringtone">Klingelton</string>
     <string name="status_bar_toggle_sync_auto">Automatisches Sync</string>
     <string name="status_bar_toggle_sync_manual">Manuelles Sync</string>
-    <string name="status_bar_toggle_syncing">Sychronisieren</string>
+    <string name="status_bar_toggle_syncing">Synchronisieren</string>
     <string name="status_bar_toggle_power_low">Energie sparen</string>
     <string name="status_bar_toggle_power_mid">Normal</string>
     <string name="status_bar_toggle_power_high">Geschwindigkeit</string>
     <string name="resource_get_auth_exceed_max_limit_title">Authorisierung übersteigt das Limit</string>
     <string name="resource_get_auth_exceed_max_limit_tips">Das Thema kann nicht auf dem aktuellen Gerät mit ihrem Zugang laufen, welches auf 10 Mobilgeräte pro Jahr beschränkt ist. Bitte benutzen Sie einen anderen Xiaomi Zugang.</string>
-    <string name="resource_switch_account">Wechslen</string>
+    <string name="resource_switch_account">Wechseln</string>
     <string name="find_device_turn_off_flight_mode">Flugzeugmodus aus</string>
     <string name="find_device_turn_off_flight_mode_instructions">Gerät gesperrt. 
 Bitte schalten Sie den Flugzeugmodus aus.</string>
